--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^20.0.4",
     "nodemon": "^1.11.0",
     "parallelshell": "^3.0.1",
+    "react-router-dom": "^4.3.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
