--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-build
-node_modules
+# dependencies
+/node_modules
+
+# build
+/dist
+
+package-lock.json
+yarn.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 .idea
